@@ -1,3 +1,3 @@
 module RailsAppsPages
-  VERSION = "0.6.0"
+  VERSION = "0.6.1"
 end
