@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 0.6.1 May 10, 2015
+
+* add 'Business Frontpage' theme from startbootstrap.com
+
 h3. 0.6.0 May 10, 2015
 
 * add 'Bare' theme from startbootstrap.com
